--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <artifactId>sys-health-fx</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.calendarfx/calendar -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>calendar</artifactId>
+            <version>11.12.5</version>
+            <type>pom</type>
+        </dependency>
 
 
     </dependencies>
