--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
             <artifactId>jfxtras-controls</artifactId>
             <version>8.0-r1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
